--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
 
         </div>
         <div id="buttons">
-            <div id="row-0">
+            <div class="row">
                 <div id="clear" class="button">CLEAR</div>
                 <div id="divide" class="operation">÷</div>
             </div>
-            <div id="row-1">
+            <div class="row">
                 <div id="seven" class="button">7</div>
                 <div id="eight" class="button">8</div>
                 <div id="nine" class="button">9</div>
                 <div id="multiply" class="operation">✕</div>
             </div>
-            <div id="row-2">
+            <div class="row">
                 <div id="four" class="button">4</div>
                 <div id="five" class="button">5</div>
                 <div id="six" class="button">6</div>
                 <div id="minus" class="operation">﹣</div>
             </div>
-            <div id="row-3">
+            <div class="row">
                 <div id="one" class="button">1</div>
                 <div id="two" class="button">2</div>
                 <div id="three" class="button">3</div>
                 <div id="plus" class="operation">+</div>
             </div>
-            <div id="row-4">
+            <div class="row">
                 <div id="zero" class="button">0</div>
                 <div id="dot" class="button">.</div>
                 <div id="equals" class="operation">=</div>
