Add color to buttons and finalize the layout

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div id="screen">
 
         </div>
+        <div id="spacer"></div>
         <div id="buttons">
             <div class="row">
                 <div id="clear" class="button">CLEAR</div>
