Add dummy data to screen

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <div id="container">
         <div id="screen">
-
+            <div id="top-screen">420 + 69 =</div>
+            <div id="bottom-screen">8008135</div>
         </div>
         <div id="spacer"></div>
         <div id="buttons">
@@ -23,7 +24,7 @@
                 <div id="seven" class="button">7</div>
                 <div id="eight" class="button">8</div>
                 <div id="nine" class="button">9</div>
-                <div id="multiply" class="operation">✕</div>
+                <div id="multiply" class="operation">×</div>
             </div>
             <div class="row">
                 <div id="four" class="button">4</div>
