Add operator eventListeners

--- a/index.html
+++ b/index.html
@@ -11,37 +11,37 @@
 <body>
     <div id="container">
         <div id="screen">
-            <div id="top-screen">420 + 69 =</div>
-            <div id="bottom-screen">8008135</div>
+            <div id="top-display">420 + 69 =</div>
+            <div id="bottom-display">8008135</div>
         </div>
         <div id="spacer"></div>
         <div id="buttons">
             <div class="row">
-                <div id="clear" class="button">CLEAR</div>
-                <div id="divide" class="operation">÷</div>
+                <button id="clear" class="btn" value="clear">CLEAR</button>
+                <button id="divide" class="operator btn" value="/">÷</button>
             </div>
             <div class="row">
-                <div id="seven" class="button">7</div>
-                <div id="eight" class="button">8</div>
-                <div id="nine" class="button">9</div>
-                <div id="multiply" class="operation">×</div>
+                <button id="seven" class="number btn" value="7">7</button>
+                <button id="eight" class="number btn" value="8">8</button>
+                <button id="nine" class="number btn" value="9">9</button>
+                <button id="multiply" class="operator btn" value="*">×</button>
             </div>
             <div class="row">
-                <div id="four" class="button">4</div>
-                <div id="five" class="button">5</div>
-                <div id="six" class="button">6</div>
-                <div id="minus" class="operation">﹣</div>
+                <button id="four" class="number btn" value="4">4</button>
+                <button id="five" class="number btn" value="5">5</button>
+                <button id="six" class="number btn" value="6">6</button>
+                <button id="minus" class="operator btn" value="-">﹣</button>
             </div>
             <div class="row">
-                <div id="one" class="button">1</div>
-                <div id="two" class="button">2</div>
-                <div id="three" class="button">3</div>
-                <div id="plus" class="operation">+</div>
+                <button id="one" class="number btn" value="1">1</button>
+                <button id="two" class="number btn" value="2">2</button>
+                <button id="three" class="number btn" value="3">3</button>
+                <button id="plus" class="operator btn" value="+">+</button>
             </div>
             <div class="row">
-                <div id="zero" class="button">0</div>
-                <div id="dot" class="button">.</div>
-                <div id="equals" class="operation">=</div>
+                <button id="zero" class="number btn" value="0">0</button>
+                <button id="decimal" class="btn" value=".">.</button>
+                <button id="equals" class="operator btn" value="=">=</button>
             </div>
         </div>
 
