Check if the entered number isNextOperand

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="container">
         <div id="screen">
             <div id="top-display">420 + 69 =</div>
-            <div id="bottom-display">8008135</div>
+            <div id="bottom-display">0</div>
         </div>
         <div id="spacer"></div>
         <div id="buttons">
