Add equals button functionality

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="row">
                 <button id="zero" class="number btn" value="0">0</button>
                 <button id="decimal" class="btn" value=".">.</button>
-                <button id="equals" class="operator btn" value="=">=</button>
+                <button id="equals" class="btn" value="=">=</button>
             </div>
         </div>
 
