Remove the top display

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <div id="screen">
-            <div id="top-display">420 + 69 =</div>
+            <div id="top-display"></div>
             <div id="bottom-display">0</div>
         </div>
         <div id="spacer"></div>
